feat: adicionando parte inicial da edicao
Criando carregamento dos dados editados

--- a/requests-http/src/app/cursos/cursos-lista/cursos-lista.component.html
+++ b/requests-http/src/app/cursos/cursos-lista/cursos-lista.component.html
@@ -28,7 +28,10 @@
           <td>{{ curso.nome }}</td>
           <td>
             <span class="float-right">
-              <button class="btn btn-outline-warning mb-1 btn-sm">
+              <button
+                (click)="onEdit(curso.id)"
+                class="btn btn-outline-warning mb-1 btn-sm"
+              >
                 Atualizar
               </button>
 
