feat: adicionando modal generica de confirmacao
Criando modal genérica para confirmação e recebendo retorno a partir de Subject

--- a/requests-http/src/app/cursos/cursos-lista/cursos-lista.component.html
+++ b/requests-http/src/app/cursos/cursos-lista/cursos-lista.component.html
@@ -65,7 +65,7 @@
   </div>
 </div>
 
-<ng-template #deleteModal>
+<!-- <ng-template #deleteModal>
   <div class="modal-body text-center">
     <p>Deseja remover o curso?</p>
     <button type="button" class="btn btn-default" (click)="confirmRemove()">
@@ -75,4 +75,4 @@
       Não
     </button>
   </div>
-</ng-template>
+</ng-template> -->
