--- a/requests-http/src/app/app.component.html
+++ b/requests-http/src/app/app.component.html
@@ -37,6 +37,15 @@
           RxJS POC
         </a>
       </li>
+      <li class="nav-item">
+        <a
+          class="nav-link"
+          [routerLink]="['upload-file']"
+          [routerLinkActive]="'active'"
+        >
+          Upload File
+        </a>
+      </li>
     </ul>
   </div>
 </nav>
