--- a/requests-http/src/app/upload-file/upload-file.component.html
+++ b/requests-http/src/app/upload-file/upload-file.component.html
@@ -8,3 +8,9 @@
   />
   <label class="custom-file-label" for="customFile">Choose file</label>
 </div>
+
+<div class="mt-3">
+  <button (click)="uploadFile()" type="button" class="btn btn-primary">
+    Upload
+  </button>
+</div>
