--- a/requests-http/src/app/upload-file/upload-file.component.html
+++ b/requests-http/src/app/upload-file/upload-file.component.html
@@ -9,6 +9,16 @@
   <label class="custom-file-label" for="customFile">Choose file</label>
 </div>
 
+<div class="progress mt-2">
+  <div
+    class="progress-bar"
+    [style.width]="percentageUpload + '%'"
+    role="progressbar"
+  >
+    {{ percentageUpload }}%
+  </div>
+</div>
+
 <div class="mt-3">
   <button (click)="uploadFile()" type="button" class="btn btn-primary">
     Upload
