--- a/requests-http/src/app/upload-file/upload-file.component.html
+++ b/requests-http/src/app/upload-file/upload-file.component.html
@@ -20,7 +20,11 @@
 </div>
 
 <div class="mt-3">
-  <button (click)="uploadFile()" type="button" class="btn btn-primary">
+  <button (click)="uploadFile()" type="button" class="btn btn-primary mr-2">
     Upload
+  </button>
+
+  <button (click)="download()" type="button" class="btn btn-primary">
+    Download
   </button>
 </div>
