--- a/requests-http/src/app/app.component.html
+++ b/requests-http/src/app/app.component.html
@@ -46,6 +46,15 @@
           Upload File
         </a>
       </li>
+      <li class="nav-item">
+        <a
+          class="nav-link"
+          [routerLink]="['busca-reativa']"
+          [routerLinkActive]="'active'"
+        >
+          Busca Reativa
+        </a>
+      </li>
     </ul>
   </div>
 </nav>
