feat: realizando requisição e trabalhando com parâmetros no Angular

--- a/requests-http/src/app/busca-reativa/lib-search/lib-search.component.html
+++ b/requests-http/src/app/busca-reativa/lib-search/lib-search.component.html
@@ -27,9 +27,9 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <td>Teste</td>
-          <td>1</td>
+        <tr *ngFor="let item of resultados$ | async">
+          <td>{{ item.name }}</td>
+          <td>{{ item.version }}</td>
         </tr>
       </tbody>
     </table>
